--- a/app/src/main/res/layouts/layout/fragment_game.xml
+++ b/app/src/main/res/layouts/layout/fragment_game.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
 		<variable
@@ -24,18 +25,26 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
 
+			<TextView
+				android:id="@+id/textView"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@{@string/game_score(viewModel.score)}"
+				android:gravity="center"
+				android:textSize="40sp"
+				tools:text="Score 666" />
+
 			<cz.helu.helublocks.widget.GameBoardView
 				android:id="@+id/gameBoardView"
 				android:layout_width="0dp"
 				android:layout_height="0dp"
 				android:layout_marginEnd="20dp"
 				android:layout_marginStart="20dp"
-				android:layout_marginTop="20dp"
 				app:bindViewModel="@{viewModel}"
 				app:layout_constraintDimensionRatio="1:1"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent" />
+				app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 			<LinearLayout
 				android:id="@+id/blocksContainer"
